# cpp-template-finder

./: CMakeLists.txt  README.md  build.sh  class_template_data.h  class_template_handler.cpp  class_template_handler.h  main.cpp  settings.sh
src/: CMakeLists.txt  class_template_callback.cpp  class_template_callback.h  collected_data.cpp  collected_data.h  main.cpp  template_finder.cpp  template_finder.h
src/template_finder/: collected_data.cpp  collected_data.h  json_format.h  main.cpp  template_finder.cpp  template_finder.h
src/template_finder/handlers/: class_template_callback.cpp  class_template_callback.h  class_template_handler.cpp  class_template_handler.h
test/: CMakeLists.txt  find_class_template_tests.cpp  simple_test.cpp  test_common.cpp  test_common.h
test/data/: nested_class_template.h  simple_class_template.h
test/template_finder/: find_class_template_tests.cpp
