set(LIB_SRC
    template_finder/handlers/class_template_callback.cpp
    template_finder/handlers/class_template_handler.cpp
    template_finder/collected_data.cpp
    template_finder/template_finder.cpp
)
add_library(cpp-template-finder-lib ${LIB_SRC})
target_include_directories(cpp-template-finder-lib
    PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/template_finder
)
target_include_directories(cpp-template-finder-lib PUBLIC ${CMAKE_SOURCE_DIR}/libs)

target_link_libraries(cpp-template-finder-lib
    clangFrontend
    clangDriver
    clangTooling
    clangDriver
    clangTooling
    clangFrontendTool
    clangFrontend
    clangDriver
    clangSerialization
    clangCodeGen
    clangParse
    clangSema
    clangStaticAnalyzerFrontend
    clangStaticAnalyzerCheckers
    clangStaticAnalyzerCore
    clangAnalysis
    clangARCMigrate
    clangRewriteFrontend
    clangEdit
    clangAST
    clangLex
    clangBasic
    clangCodeGen
    clangSema
    clangAnalysis
    clangAST
    clangParse
    clangLex
    clangASTMatchers
    clangBasic
)

target_link_libraries(cpp-template-finder-lib
    LLVMPasses
    LLVMObjCARCOpts
    LLVMMIRParser
    LLVMSymbolize
    LLVMDebugInfoPDB
    LLVMDebugInfoDWARF
    LLVMCoverage
    LLVMTableGen
    LLVMOrcJIT
    LLVMXCoreDisassembler
    LLVMXCoreCodeGen
    LLVMXCoreDesc
    LLVMXCoreInfo
    LLVMXCoreAsmPrinter
    LLVMSystemZDisassembler
    LLVMSystemZCodeGen
    LLVMSystemZAsmParser
    LLVMSystemZDesc
    LLVMSystemZInfo
    LLVMSystemZAsmPrinter
    LLVMSparcDisassembler
    LLVMSparcCodeGen
    LLVMSparcAsmParser
    LLVMSparcDesc
    LLVMSparcInfo
    LLVMSparcAsmPrinter
    LLVMRISCVDesc
    LLVMRISCVCodeGen
    LLVMRISCVInfo
    LLVMPowerPCDisassembler
    LLVMPowerPCCodeGen
    LLVMPowerPCAsmParser
    LLVMPowerPCDesc
    LLVMPowerPCInfo
    LLVMPowerPCAsmPrinter
    LLVMNVPTXCodeGen
    LLVMNVPTXDesc
    LLVMNVPTXInfo
    LLVMNVPTXAsmPrinter
    LLVMMSP430CodeGen
    LLVMMSP430Desc
    LLVMMSP430Info
    LLVMMSP430AsmPrinter
    LLVMMipsDisassembler
    LLVMMipsCodeGen
    LLVMMipsAsmParser
    LLVMMipsDesc
    LLVMMipsInfo
    LLVMMipsAsmPrinter
    LLVMLanaiDisassembler
    LLVMLanaiCodeGen
    LLVMLanaiAsmParser
    LLVMLanaiDesc
    LLVMLanaiInfo
    LLVMHexagonDisassembler
    LLVMHexagonCodeGen
    LLVMHexagonAsmParser
    LLVMHexagonDesc
    LLVMHexagonInfo
    LLVMBPFDisassembler
    LLVMBPFCodeGen
    LLVMBPFDesc
    LLVMBPFInfo
    LLVMBPFAsmPrinter
    LLVMARMDisassembler
    LLVMARMCodeGen
    LLVMARMAsmParser
    LLVMARMDesc
    LLVMARMInfo
    LLVMARMAsmPrinter
    LLVMAMDGPUDisassembler
    LLVMAMDGPUCodeGen
    LLVMAMDGPUAsmParser
    LLVMAMDGPUDesc
    LLVMAMDGPUInfo
    LLVMAMDGPUAsmPrinter
    LLVMAMDGPUUtils
    LLVMAArch64Disassembler
    LLVMAArch64CodeGen
    LLVMAArch64AsmParser
    LLVMAArch64Desc
    LLVMAArch64Info
    LLVMAArch64AsmPrinter
    LLVMAArch64Utils
    LLVMObjectYAML
    LLVMLibDriver
    LLVMOption
    gtest_main
    gtest
    LLVMX86Disassembler
    LLVMX86AsmParser
    LLVMX86CodeGen
    LLVMGlobalISel
    LLVMSelectionDAG
    LLVMAsmPrinter
    LLVMDebugInfoCodeView
    LLVMDebugInfoMSF
    LLVMX86Desc
    LLVMMCDisassembler
    LLVMX86Info
    LLVMX86AsmPrinter
    LLVMX86Utils
    LLVMMCJIT
    LLVMLineEditor
    LLVMInterpreter
    LLVMExecutionEngine
    LLVMRuntimeDyld
    LLVMCodeGen
    LLVMTarget
    LLVMCoroutines
    LLVMipo
    LLVMInstrumentation
    LLVMVectorize
    LLVMScalarOpts
    LLVMLinker
    LLVMIRReader
    LLVMAsmParser
    LLVMInstCombine
    LLVMTransformUtils
    LLVMBitWriter
    LLVMAnalysis
    LLVMProfileData
    LLVMObject
    LLVMMCParser
    LLVMMC
    LLVMBitReader
    LLVMCore
    LLVMSupport
    LLVMDemangle
    rt
    dl
    tinfo
    pthread
    z
    m
)

add_executable(cpp-template-finder template_finder/main.cpp)
target_link_libraries (cpp-template-finder LINK_PUBLIC cpp-template-finder-lib)
